<resources>
    <string name="app_name">MovilidadApp</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="descripcion_contacto">Descripción del contacto</string>
    <string name="siguiente">Siguiente</string>
    <string name="editar_datos">Editar Datos</string>
</resources>
